# pydantic-collections

./: .travis.yml  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
pydantic_collections/: __init__.py  __init__.pyi  _base_collection_model.py  _v1.py  _v2.py
tests/: test_collections.py  test_v1.py  test_v2.py
